Changes for 1.8.0.0
* Fixed order of firing in ww2v3 and Global 1940, so that defending subs that are not sneak attacking will fire after all attackers have fired. (veqryn)

* Fixing a bug where attacking with a carrier loaded with allied fighters, then retreating, would prevent those fighters from being able to participate in battles for the rest of the game. (veqryn)

* Allowed TripleA clip player to access sound files within a zipped map. (veqryn)

* Fixed bug that allowed fighters to be moved greater than their allowed movement if paired with a carrier. (veqryn)

* Adding scroll bars to placement window. (veqryn)

* Fixed another bug in getMaxUnitsToBePlaced, it will no longer stop the game if it frees up enough capacity to place but not equal to theoretical maximum. (veqryn)

* Fixed bug where a strategic bombing unit receiving negative support and/or negative terrain modifier would be unable to bomb is its attack power decreased to zero. (veqryn)

* Created new step properties for move delegates, "combinedTurns", which changes some validation for intermeshed player phases, such as allowing air to live if the ally could place a carrier under them. (veqyrn)

* Created new step properties for purchase and place delegates, "bid", which controls if it is a bid phase. (veqyrn)

* Created new step properties for move and end turn delegates, "repairUnits", which controls when units get repaired. (veqyrn)

* Created new step properties for move and place delegates, "removeAirThatCanNotLand", which controls when air that can not land gets killed. (veqryn)

* Created new step properties for move delegates, "resetUnitState", which controls when units get their movement and other stats reset. (veqryn)

* Created new step properties for move delegates, "giveBonusMovement", which controls when bonus movement is given. (veqryn)

* Created new step properties for move delegates, "fireRocketsAfter", which controls when rockets fire. (veqryn)
